[gd_scene load_steps=12 format=3 uid="uid://htrxa20sgcmh"]

[ext_resource type="Texture2D" uid="uid://by53yku80bja6" path="res://assets/Player/Hand_R.png" id="1_5v02t"]
[ext_resource type="Script" uid="uid://nspxnci3n4rh" path="res://scripts/player_r.gd" id="1_k7wkt"]
[ext_resource type="Texture2D" uid="uid://bg4e3vswrk88d" path="res://assets/Player/Ruch1.png" id="1_xkldv"]
[ext_resource type="Texture2D" uid="uid://dpp7g8x6hut22" path="res://assets/Player/Ruch2.png" id="2_5v02t"]
[ext_resource type="Texture2D" uid="uid://cbv1tqglqpl1i" path="res://assets/Player/Ruch3.png" id="3_k7wkt"]
[ext_resource type="Texture2D" uid="uid://butjah0irgxra" path="res://assets/Player/Ruch4.png" id="4_ott1u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_d2wlt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_5v02t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_xkldv")
}, {
"duration": 1.0,
"texture": ExtResource("2_5v02t")
}, {
"duration": 1.0,
"texture": ExtResource("3_k7wkt")
}],
"loop": true,
"name": &"grab",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ott1u")
}],
"loop": true,
"name": &"hold",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_mqtes"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(334, -195.629)]
}

[sub_resource type="Animation" id="Animation_ott1u"]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(334, -500), Vector2(334, -195.629)]
}

[sub_resource type="Animation" id="Animation_k7wkt"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(334, -195.629), Vector2(334, -500)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qsiep"]
_data = {
&"RESET": SubResource("Animation_mqtes"),
&"hide": SubResource("Animation_ott1u"),
&"show": SubResource("Animation_k7wkt")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_k7wkt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(334, -195.629)
scale = Vector2(3.31, 3.45933)
sprite_frames = SubResource("SpriteFrames_d2wlt")
autoplay = "default"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.9

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qsiep")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
